--- a/index.html
+++ b/index.html
@@ -24,6 +24,23 @@
         </div>
     </header>
 
+    <!-- MAIN-CONTENT  -->
+    <main class="main-content">
+        <div class="container">
+            <form class="filters" action="https://htmlacademy.ru" method="GET">
+                <input class="filters-search-input" type="search" name="search" placeholder="Search for a country…" aria-label="Country name" required>
+                <select class="filters-region-select" name="region"  aria-label="Region" required>
+                    <option selected disabled>Filter by Region</option>
+                    <option> Africa</option>
+                    <option>America</option>
+                    <option>Asia</option>
+                    <option>Europe</option>
+                    <option>Oceania</option>
+                </select>
+            </form>
+        </div>
+    </main>
+
 
 
      <script src="js/main.js"></script>
