Add countries list

--- a/index.html
+++ b/index.html
@@ -27,17 +27,224 @@
     <!-- MAIN-CONTENT  -->
     <main class="main-content">
         <div class="container">
-            <form class="filters" action="https://htmlacademy.ru" method="GET">
-                <input class="filters-search-input" type="search" name="search" placeholder="Search for a country…" aria-label="Country name" required>
-                <select class="filters-region-select" name="region"  aria-label="Region" required>
-                    <option selected disabled>Filter by Region</option>
-                    <option> Africa</option>
-                    <option>America</option>
-                    <option>Asia</option>
-                    <option>Europe</option>
-                    <option>Oceania</option>
-                </select>
-            </form>
+            <section>
+                <form class="filters" action="https://htmlacademy.ru" method="GET">
+                    <input class="filters-search-input" type="search" name="search" placeholder="Search for a country…" aria-label="Country name" required>
+                    <select class="filters-region-select" name="region"  aria-label="Region" required>
+                        <option selected disabled>Filter by Region</option>
+                        <option> Africa</option>
+                        <option>America</option>
+                        <option>Asia</option>
+                        <option>Europe</option>
+                        <option>Oceania</option>
+                    </select>
+                </form>
+            </section>
+            <!-- INDEX COUNTRIES -->
+            <section class="index-countries">
+                <!-- <h2>Countries list</h2> -->
+                <ul class="index-countries-list">
+                    <li class="index-countries-item">
+                        <div class="index-country">
+                            <img class="index-country-flag" src="image/Flag_Germany.jpg" alt="Germany" width="264" height="160" srcset="image/Flag_Germany.jpg 1x, image/Flag_Germany@2x.jpg 2x">
+                            <div class="index-country-info">
+                                <h3 class="index-country-name">
+                                    <a class="index-country-link" href="country.html">Germany</a>
+                                </h3>
+                                <dl class="index-country-detials">
+                                    <div class="index-country-detials-item">
+                                        <dt class="index-country-detials-title">Population:</dt>
+                                        <dd class="index-country-detials-value">81,770,900</dd>
+                                    </div>
+                                    <div class="index-country-detials-item">
+                                        <dt class="index-country-detials-title">Region:</dt>
+                                        <dd class="index-country-detials-value">Europe</dd>
+                                    </div>
+                                    <div class="index-country-detials-item">
+                                        <dt class="index-country-detials-title">Capital:</dt>
+                                        <dd class="index-country-detials-value">Berlin</dd>
+                                    </div>
+                                </dl>
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class="index-countries-item">
+                        <div class="index-country">
+                            <img class="index-country-flag" src="image/flag-usa.jpg" alt="flag-usa" width="264" height="160" srcset="image/flag-usa.jpg 1x, image/flag-usa@2x.jpg 2x">
+                            <div class="index-country-info">
+                                <h3 class="index-country-name">
+                                    <a class="index-country-link" href="country.html">United States of America</a>
+                                </h3>
+                                <dl class="index-country-detials">
+                                    <div class="index-country-detials-item">
+                                        <dt class="index-country-detials-title">Population:</dt>
+                                        <dd class="index-country-detials-value">323,947,000</dd>
+                                    </div>
+                                    <div class="index-country-detials-item">
+                                        <dt class="index-country-detials-title">Region:</dt>
+                                        <dd class="index-country-detials-value">Americas</dd>
+                                    </div>
+                                    <div class="index-country-detials-item">
+                                        <dt class="index-country-detials-title">Capital:</dt>
+                                        <dd class="index-country-detials-value">Washington, D.C.</dd>
+                                    </div>
+                                </dl>
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class="index-countries-item">
+                        <div class="index-country">
+                            <img class="index-country-flag" src="image/flag-brazil.jpg" alt="flag-brazil" width="264" height="160" srcset="image/flag-brazil.jpg 1x, image/flag-brazil@2x.jpg 2x">
+                            <div class="index-country-info">
+                                <h3 class="index-country-name">
+                                    <a class="index-country-link" href="country.html">Brazil</a>
+                                </h3>
+                                <dl class="index-country-detials">
+                                    <div class="index-country-detials-item">
+                                        <dt class="index-country-detials-title">Population:</dt>
+                                        <dd class="index-country-detials-value">206,135,893</dd>
+                                    </div>
+                                    <div class="index-country-detials-item">
+                                        <dt class="index-country-detials-title">Region:</dt>
+                                        <dd class="index-country-detials-value">Americas</dd>
+                                    </div>
+                                    <div class="index-country-detials-item">
+                                        <dt class="index-country-detials-title">Capital:</dt>
+                                        <dd class="index-country-detials-value">Brasília</dd>
+                                    </div>
+                                </dl>
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class="index-countries-item">
+                        <div class="index-country">
+                            <img class="index-country-flag" src="image/flag-iceland.jpg" alt="Iceland" width="264" height="160" srcset="image/flag-iceland.jpg 1x, image/Flag_Iceland@2x-1.jpg 2x">
+                            <div class="index-country-info">
+                                <h3 class="index-country-name">
+                                    <a class="index-country-link" href="country.html">Iceland</a>
+                                </h3>
+                                <dl class="index-country-detials">
+                                    <div class="index-country-detials-item">
+                                        <dt class="index-country-detials-title">Population:</dt>
+                                        <dd class="index-country-detials-value">334,300</dd>
+                                    </div>
+                                    <div class="index-country-detials-item">
+                                        <dt class="index-country-detials-title">Region:</dt>
+                                        <dd class="index-country-detials-value">Europe</dd>
+                                    </div>
+                                    <div class="index-country-detials-item">
+                                        <dt class="index-country-detials-title">Capital:</dt>
+                                        <dd class="index-country-detials-value">Reykjavík</dd>
+                                    </div>
+                                </dl>
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class="index-countries-item">
+                        <div class="index-country">
+                            <img class="index-country-flag" src="image/flag-Afganistan.jpg" alt="flag-Afganistan" width="264" height="160" srcset="image/flag-Afganistan.jpg 1x, image/flag-afganistan@2x-2.jpg 2x">
+                            <div class="index-country-info">
+                                <h3 class="index-country-name">
+                                    <a class="index-country-link" href="country.html">Afganistan</a>
+                                </h3>
+                                <dl class="index-country-detials">
+                                    <div class="index-country-detials-item">
+                                        <dt class="index-country-detials-title">Population:</dt>
+                                        <dd class="index-country-detials-value">27,657,145</dd>
+                                    </div>
+                                    <div class="index-country-detials-item">
+                                        <dt class="index-country-detials-title">Region:</dt>
+                                        <dd class="index-country-detials-value">Asia</dd>
+                                    </div>
+                                    <div class="index-country-detials-item">
+                                        <dt class="index-country-detials-title">Capital:</dt>
+                                        <dd class="index-country-detials-value">Kabul</dd>
+                                    </div>
+                                </dl>
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class="index-countries-item">
+                        <div class="index-country">
+                            <img class="index-country-flag" src="image/flag-Islands.jpg" alt="Åland Islands" width="264" height="160" srcset="image/flag-Islands.jpg 1x, image/flag-islands@2x.jpg 2x">
+                            <div class="index-country-info">
+                                <h3 class="index-country-name">
+                                    <a class="index-country-link" href="country.html">Åland Islands</a>
+                                </h3>
+                                <dl class="index-country-detials">
+                                    <div class="index-country-detials-item">
+                                        <dt class="index-country-detials-title">Population:</dt>
+                                        <dd class="index-country-detials-value">28,875</dd>
+                                    </div>
+                                    <div class="index-country-detials-item">
+                                        <dt class="index-country-detials-title">Region:</dt>
+                                        <dd class="index-country-detials-value">Europe</dd>
+                                    </div>
+                                    <div class="index-country-detials-item">
+                                        <dt class="index-country-detials-title">Capital:</dt>
+                                        <dd class="index-country-detials-value">Mariehamn</dd>
+                                    </div>
+                                </dl>
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class="index-countries-item">
+                        <div class="index-country">
+                            <img class="index-country-flag" src="image/flag-Albania.jpg" alt="Albania" width="264" height="160" srcset="image/flag-Albania.jpg 1x, image/flag-Albania@2x.jpg 2x">
+                            <div class="index-country-info">
+                                <h3 class="index-country-name">
+                                    <a class="index-country-link" href="country.html">Albania</a>
+                                </h3>
+                                <dl class="index-country-detials">
+                                    <div class="index-country-detials-item">
+                                        <dt class="index-country-detials-title">Population:</dt>
+                                        <dd class="index-country-detials-value">2,886,026</dd>
+                                    </div>
+                                    <div class="index-country-detials-item">
+                                        <dt class="index-country-detials-title">Region:</dt>
+                                        <dd class="index-country-detials-value">Europe</dd>
+                                    </div>
+                                    <div class="index-country-detials-item">
+                                        <dt class="index-country-detials-title">Capital:</dt>
+                                        <dd class="index-country-detials-value">Tirana</dd>
+                                    </div>
+                                </dl>
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class="index-countries-item">
+                        <div class="index-country">
+                            <img class="index-country-flag" src="image/flag-Afrika.jpg" alt="Algeria" width="264" height="160" srcset="image/flag-Afrika.jpg 1x, image/flag-Afrika@2x.jpg 2x">
+                            <div class="index-country-info">
+                                <h3 class="index-country-name">
+                                    <a class="index-country-link" href="country.html">Algeria</a>
+                                </h3>
+                                <dl class="index-country-detials">
+                                    <div class="index-country-detials-item">
+                                        <dt class="index-country-detials-title">Population:</dt>
+                                        <dd class="index-country-detials-value">40,400,000</dd>
+                                    </div>
+                                    <div class="index-country-detials-item">
+                                        <dt class="index-country-detials-title">Region:</dt>
+                                        <dd class="index-country-detials-value">Afrika</dd>
+                                    </div>
+                                    <div class="index-country-detials-item">
+                                        <dt class="index-country-detials-title">Capital:</dt>
+                                        <dd class="index-country-detials-value">Berlin</dd>
+                                    </div>
+                                </dl>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </section>
         </div>
     </main>
 
