--- a/index.html
+++ b/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-     <meta charset="UTF-8">
-     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Project</title>
-     <link rel="stylesheet" href="style/normalize.css">
-     <link rel="stylesheet" href="style/style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Project</title>
+    <link rel="stylesheet" href="style/normalize.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
+
 <body>
     <header class="site-header">
         <div class="site-header-container container">
             <a class="site-header-logo" href="index.html">Where in the world?</a>
             <button class="site-header-theme-toggler" type="button">
                 <span class="site-header-theme-toggler-inner">
-                    <svg class="site-header-theme-toggler-icon" width="18" height="17" viewBox="0 0 18 17"  xmlns="http://www.w3.org/2000/svg">
-                        <path fill-rule="evenodd" clip-rule="evenodd" d="M12.5532 11.815C8.66857 11.815 5.51929 8.92783 5.51929 5.36821C5.51929 4.0253 5.96679 2.78158 6.73143 1.75C3.69036 2.69515 1.5 5.33122 1.5 8.43807C1.5 12.3385 4.94929 15.5 9.20357 15.5C12.5929 15.5 15.4696 13.4932 16.5 10.7045C15.375 11.4048 14.0161 11.815 12.5532 11.815Z" fill="white" stroke="currentColor" stroke-width="1.25"/>
-                        </svg>
+                    <svg class="site-header-theme-toggler-icon" width="18" height="17" viewBox="0 0 18 17"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M12.5532 11.815C8.66857 11.815 5.51929 8.92783 5.51929 5.36821C5.51929 4.0253 5.96679 2.78158 6.73143 1.75C3.69036 2.69515 1.5 5.33122 1.5 8.43807C1.5 12.3385 4.94929 15.5 9.20357 15.5C12.5929 15.5 15.4696 13.4932 16.5 10.7045C15.375 11.4048 14.0161 11.815 12.5532 11.815Z"
+                            fill="white" stroke="currentColor" stroke-width="1.25" />
+                    </svg>
 
                     <span class="site-header-theme-toggler-text">Dark Mode</span>
                 </span>
@@ -29,14 +34,23 @@
         <div class="container">
             <section>
                 <form class="filters" action="https://htmlacademy.ru" method="GET">
-                    <input class="filters-search-input" type="search" name="search" placeholder="Search for a country…" aria-label="Country name" required>
-                    <select class="filters-region-select" name="region"  aria-label="Region" required>
-                        <option selected disabled>Filter by Region</option>
-                        <option> Africa</option>
-                        <option>America</option>
-                        <option>Asia</option>
-                        <option>Europe</option>
-                        <option>Oceania</option>
+                    <div class="filter-search-wrapper">
+                        <svg class="filter-search-icon" xmlns="http://www.w3.org/2000/svg" width="18" height="18"
+                            fill="none">
+                            <path fill="currentColor"
+                                d="M12.5 11h-.8l-.3-.3c1-1.1 1.6-2.6 1.6-4.2C13 2.9 10.1 0 6.5 0S0 2.9 0 6.5 2.9 13 6.5 13c1.6 0 3.1-.6 4.2-1.6l.3.3v.8l5 5 1.5-1.5-5-5Zm-6 0C4 11 2 9 2 6.5S4 2 6.5 2 11 4 11 6.5 9 11 6.5 11Z"
+                                clip-rule="evenodd" />
+                        </svg>
+                        <input class="filters-search-input" type="search" name="search"
+                            placeholder="Search for a country…" aria-label="Country name" required>
+                        <select class="filters-region-select" name="region" aria-label="Region" required>
+                    </div>
+                    <option selected disabled>Filter by Region</option>
+                    <option> Africa</option>
+                    <option>America</option>
+                    <option>Asia</option>
+                    <option>Europe</option>
+                    <option>Oceania</option>
                     </select>
                 </form>
             </section>
@@ -46,7 +60,8 @@
                 <ul class="index-countries-list">
                     <li class="index-countries-item">
                         <div class="index-country">
-                            <img class="index-country-flag" src="image/Flag_Germany.jpg" alt="Germany" width="264" height="160" srcset="image/Flag_Germany.jpg 1x, image/Flag_Germany@2x.jpg 2x">
+                            <img class="index-country-flag" src="image/Flag_Germany.jpg" alt="Germany" width="264"
+                                height="160" srcset="image/Flag_Germany.jpg 1x, image/Flag_Germany@2x.jpg 2x">
                             <div class="index-country-info">
                                 <h3 class="index-country-name">
                                     <a class="index-country-link" href="country.html">Germany</a>
@@ -71,7 +86,8 @@
 
                     <li class="index-countries-item">
                         <div class="index-country">
-                            <img class="index-country-flag" src="image/flag-usa.jpg" alt="flag-usa" width="264" height="160" srcset="image/flag-usa.jpg 1x, image/flag-usa@2x.jpg 2x">
+                            <img class="index-country-flag" src="image/flag-usa.jpg" alt="flag-usa" width="264"
+                                height="160" srcset="image/flag-usa.jpg 1x, image/flag-usa@2x.jpg 2x">
                             <div class="index-country-info">
                                 <h3 class="index-country-name">
                                     <a class="index-country-link" href="country.html">United States of America</a>
@@ -96,7 +112,8 @@
 
                     <li class="index-countries-item">
                         <div class="index-country">
-                            <img class="index-country-flag" src="image/flag-brazil.jpg" alt="flag-brazil" width="264" height="160" srcset="image/flag-brazil.jpg 1x, image/flag-brazil@2x.jpg 2x">
+                            <img class="index-country-flag" src="image/flag-brazil.jpg" alt="flag-brazil" width="264"
+                                height="160" srcset="image/flag-brazil.jpg 1x, image/flag-brazil@2x.jpg 2x">
                             <div class="index-country-info">
                                 <h3 class="index-country-name">
                                     <a class="index-country-link" href="country.html">Brazil</a>
@@ -121,7 +138,8 @@
 
                     <li class="index-countries-item">
                         <div class="index-country">
-                            <img class="index-country-flag" src="image/flag-iceland.jpg" alt="Iceland" width="264" height="160" srcset="image/flag-iceland.jpg 1x, image/Flag_Iceland@2x-1.jpg 2x">
+                            <img class="index-country-flag" src="image/flag-iceland.jpg" alt="Iceland" width="264"
+                                height="160" srcset="image/flag-iceland.jpg 1x, image/Flag_Iceland@2x-1.jpg 2x">
                             <div class="index-country-info">
                                 <h3 class="index-country-name">
                                     <a class="index-country-link" href="country.html">Iceland</a>
@@ -146,7 +164,9 @@
 
                     <li class="index-countries-item">
                         <div class="index-country">
-                            <img class="index-country-flag" src="image/flag-Afganistan.jpg" alt="flag-Afganistan" width="264" height="160" srcset="image/flag-Afganistan.jpg 1x, image/flag-afganistan@2x-2.jpg 2x">
+                            <img class="index-country-flag" src="image/flag-Afganistan.jpg" alt="flag-Afganistan"
+                                width="264" height="160"
+                                srcset="image/flag-Afganistan.jpg 1x, image/flag-afganistan@2x-2.jpg 2x">
                             <div class="index-country-info">
                                 <h3 class="index-country-name">
                                     <a class="index-country-link" href="country.html">Afganistan</a>
@@ -171,7 +191,8 @@
 
                     <li class="index-countries-item">
                         <div class="index-country">
-                            <img class="index-country-flag" src="image/flag-Islands.jpg" alt="Åland Islands" width="264" height="160" srcset="image/flag-Islands.jpg 1x, image/flag-islands@2x.jpg 2x">
+                            <img class="index-country-flag" src="image/flag-Islands.jpg" alt="Åland Islands" width="264"
+                                height="160" srcset="image/flag-Islands.jpg 1x, image/flag-islands@2x.jpg 2x">
                             <div class="index-country-info">
                                 <h3 class="index-country-name">
                                     <a class="index-country-link" href="country.html">Åland Islands</a>
@@ -196,7 +217,8 @@
 
                     <li class="index-countries-item">
                         <div class="index-country">
-                            <img class="index-country-flag" src="image/flag-Albania.jpg" alt="Albania" width="264" height="160" srcset="image/flag-Albania.jpg 1x, image/flag-Albania@2x.jpg 2x">
+                            <img class="index-country-flag" src="image/flag-Albania.jpg" alt="Albania" width="264"
+                                height="160" srcset="image/flag-Albania.jpg 1x, image/flag-Albania@2x.jpg 2x">
                             <div class="index-country-info">
                                 <h3 class="index-country-name">
                                     <a class="index-country-link" href="country.html">Albania</a>
@@ -221,7 +243,8 @@
 
                     <li class="index-countries-item">
                         <div class="index-country">
-                            <img class="index-country-flag" src="image/flag-Afrika.jpg" alt="Algeria" width="264" height="160" srcset="image/flag-Afrika.jpg 1x, image/flag-Afrika@2x.jpg 2x">
+                            <img class="index-country-flag" src="image/flag-Afrika.jpg" alt="Algeria" width="264"
+                                height="160" srcset="image/flag-Afrika.jpg 1x, image/flag-Afrika@2x.jpg 2x">
                             <div class="index-country-info">
                                 <h3 class="index-country-name">
                                     <a class="index-country-link" href="country.html">Algeria</a>
@@ -250,6 +273,7 @@
 
 
 
-     <script src="js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
+
 </html>
